tests/snapshots/examples_fixtures/type_system__failing__113_keyword_alias_var.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/113_keyword_alias_var.flx
== compile ==
failed (parse)
== diagnostics ==
error[E030]: Unknown Keyword

Unknown keyword `var`. Flux uses `let` for bindings.

  examples/type_system/failing/113_keyword_alias_var.flx:1:1
  |
1 | var x = 1
  | ^^^

Hint:
  Did you mean `let`?
== stdout ==
<not executed>
